# support-desk-agent

./: .env.example  README.md  app.py  database.py  main.py  pyproject.toml  requirements.txt
static/: app.js  index.html  style.css
tests/: test_api.py  test_tools.py
