[project]
name = "support-desk-agent"
version = "0.1.0"
description = "AI-powered support desk assistant built with the OpenAI Agents SDK"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "openai-agents>=0.17.4",
    "python-dotenv>=1.0.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
]
